--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@ title: Home
 
 <div class="pagination">
   {% if paginator.next_page %}
-    <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">>></a>
+    <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">older</a>
   {% else %}
-    <span class="pagination-item older">>></span>
+    <span class="pagination-item older">older</span>
   {% endif %}
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}"><<</a>
+      <a class="pagination-item newer" href="{{ site.baseurl }}">newer<<</a>
     {% else %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}page{{paginator.previous_page}}"><<</a>
+      <a class="pagination-item newer" href="{{ site.baseurl }}page{{paginator.previous_page}}">newer</a>
     {% endif %}
   {% else %}
-    <span class="pagination-item newer"><<</span>
+    <span class="pagination-item newer">newer</span>
   {% endif %}
 </div>
